# uv-fast-api

./: .gitignore  README.md  main.py  pyproject.toml
app/core/: config.py  database.py
app/features/feature_1/: __init__.py  feature_1_api.py  feature_1_schemas.py  feature_1_service.py
app/features/simple_pg_db/: __init__.py  simple_pg_db_api.py  simple_pg_db_models.py  simple_pg_db_schemas.py  simple_pg_db_service.py
prompts/: fastapi-db.md  fastapi-no-db.md
